fix(dli): address review — docs, STORE test coverage, job-scoped export
- Add missing src/main/resources/doc/io.kestra.plugin.huawei.dli.md and
  list DLI in the top-level plugin doc's Services section.
- Add a WireMock-backed unit test exercising the full STORE path (submit,
  poll, export-result job, OBS list+download, ION read-back), running
  unconditionally in CI.
- Scope the OBS export path to the query job ID so concurrent or repeated
  runs against the same outputLocation never mix or clobber each other's
  exported result data.
- Wrap ND-JSON parse failures during read-back with an actionable message
  naming the offending OBS object.
- Derive the output jobType from the same response used for the QUERY
  decision, use List.getFirst(), and exclude the kill()-support fields
  from equals/hashCode/toString.